// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/Document/Bakes/Detail render 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "BAKES",
          "url": "/dashboard/bakes",
        },
        Object {
          "label": "id",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "approvalType": "manual",
                  "status": "telkom approval",
                  "telkomApprovalStatus": true,
                  "worklog": Array [],
                },
                "schema": Array [
                  Object {
                    "label": "COMPANY",
                    "name": "company.name",
                  },
                  Object {
                    "label": "BAKES ID",
                    "name": "bakesId",
                  },
                  Object {
                    "grid": 12,
                    "label": "BAKES NUMBER",
                    "name": "ndeNumber",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "updatedAt",
                  },
                ],
              },
              "title": "Detail Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Telkom",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Customer",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "approvalType": "manual",
                  "status": "telkom approval",
                  "telkomApprovalStatus": true,
                  "worklog": Array [],
                },
                "schema": Array [
                  Object {
                    "action": Object {
                      "children": "Upload",
                      "onClick": [MockFunction],
                    },
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "BAKES",
                    "name": "bakesDocument",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REQ SBR",
                    "name": "reqSbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "SBR",
                    "name": "sbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "OTHER DOC",
                    "name": "otherDoc",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REVIEW NOTES",
                    "name": "bakesNotesDocument",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 1,
                "errors": undefined,
                "steps": Array [
                  "Submitted",
                  "Telkom Approval",
                  "Customer Approval",
                  "Approved",
                ],
              },
              "title": "BAKES Approval Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": Array [],
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "telkom approval",
        "variant": "warning",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <UploadSignedBakes
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={true}
  />
  <EditReviewer
    data={
      Object {
        "approvalType": "manual",
        "status": "telkom approval",
        "telkomApprovalStatus": true,
        "worklog": Array [],
      }
    }
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
  />
</React.Fragment>
`;

exports[`src/pages/Document/Bakes/Detail render/empty 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "BAKES",
          "url": "/dashboard/bakes",
        },
        Object {
          "label": "id",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={true}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "label": "COMPANY",
                    "name": "company.name",
                  },
                  Object {
                    "label": "BAKES ID",
                    "name": "bakesId",
                  },
                  Object {
                    "grid": 12,
                    "label": "BAKES NUMBER",
                    "name": "ndeNumber",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "updatedAt",
                  },
                ],
              },
              "title": "Detail Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Telkom",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Customer",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Object {},
                "schema": Array [
                  Object {
                    "action": undefined,
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "BAKES",
                    "name": "bakesDocument",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REQ SBR",
                    "name": "reqSbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "SBR",
                    "name": "sbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "OTHER DOC",
                    "name": "otherDoc",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REVIEW NOTES",
                    "name": "bakesNotesDocument",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": undefined,
                "steps": Array [
                  "Submitted",
                  "Telkom Approval",
                  "Customer Approval",
                  "Approved",
                ],
              },
              "title": "BAKES Approval Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": undefined,
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={null}
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <UploadSignedBakes
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={true}
  />
  <EditReviewer
    data={null}
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
  />
</React.Fragment>
`;

exports[`src/pages/Document/Bakes/Detail render/returned 1`] = `
<React.Fragment>
  <Detail
    action={Array []}
    breadcrumb={
      Array [
        Object {
          "label": "BAKES",
          "url": "/dashboard/bakes",
        },
        Object {
          "label": "id",
        },
      ]
    }
    filter={Array []}
    loading={false}
    notFound={false}
    otherStatus={null}
    schema={
      Array [
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "data": Object {
                  "approvalType": "manual",
                  "status": "returned",
                  "telkomApprovalStatus": true,
                  "worklog": Array [],
                },
                "schema": Array [
                  Object {
                    "label": "COMPANY",
                    "name": "company.name",
                  },
                  Object {
                    "label": "BAKES ID",
                    "name": "bakesId",
                  },
                  Object {
                    "grid": 12,
                    "label": "BAKES NUMBER",
                    "name": "ndeNumber",
                  },
                  Object {
                    "converter": [Function],
                    "label": "CREATED DATE",
                    "name": "createdAt",
                  },
                  Object {
                    "converter": [Function],
                    "label": "LAST UPDATE",
                    "name": "updatedAt",
                  },
                ],
              },
              "title": "Detail Information",
              "type": "information",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Telkom",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": undefined,
                "schema": Array [
                  Object {
                    "grid": 6,
                    "label": "NAME",
                    "name": "name",
                  },
                  Object {
                    "grid": 6,
                    "label": "TITLE",
                    "name": "position",
                  },
                  Object {
                    "grid": 6,
                    "label": "EMAIL",
                    "name": "email",
                  },
                  Object {
                    "grid": 6,
                    "label": "NO. TELP",
                    "name": "phoneNumber",
                  },
                  Object {
                    "grid": 12,
                    "label": "NOTES",
                    "name": "note",
                  },
                ],
              },
              "title": "Note From Customer",
              "type": "numbering",
            },
            Object {
              "properties": Object {
                "data": Object {
                  "approvalType": "manual",
                  "status": "returned",
                  "telkomApprovalStatus": true,
                  "worklog": Array [],
                },
                "schema": Array [
                  Object {
                    "action": undefined,
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "BAKES",
                    "name": "bakesDocument",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REQ SBR",
                    "name": "reqSbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "SBR",
                    "name": "sbr",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "OTHER DOC",
                    "name": "otherDoc",
                  },
                  Object {
                    "attachmentProps": Object {
                      "hidePreviewDownload": true,
                    },
                    "label": "REVIEW NOTES",
                    "name": "bakesNotesDocument",
                  },
                ],
              },
              "title": "Document Attachment",
              "type": "attachment",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
        },
        Object {
          "content": Array [
            Object {
              "properties": Object {
                "active": 0,
                "errors": "returned",
                "steps": Array [
                  "Submitted",
                  "Telkom Approval",
                  "Customer Approval",
                  "Approved",
                ],
              },
              "title": "BAKES Approval Step",
              "type": "stepper",
            },
            Object {
              "properties": Object {
                "data": Array [],
              },
              "title": "History Work Log",
              "type": "worklog",
            },
          ],
          "gridProps": Object {
            "md": 6,
            "xs": 12,
          },
          "stickRight": true,
        },
      ]
    }
    search={null}
    status={
      Object {
        "children": "returned",
        "variant": "danger",
      }
    }
    tabs={
      Object {
        "onChange": [Function],
        "options": Array [],
        "value": "",
      }
    }
    withTopDivider={true}
  />
  <UploadSignedBakes
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={false}
  />
  <EditReviewer
    data={
      Object {
        "approvalType": "manual",
        "status": "returned",
        "telkomApprovalStatus": true,
        "worklog": Array [],
      }
    }
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    open={true}
  />
</React.Fragment>
`;
